Fix single quote and page align

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,6 +14,7 @@ body {
     box-sizing: border-box;
     height:auto;
     padding-bottom: 140px;/*等于或略大于footer的高度*/
+    text-align: justify;
 }
 
 .site-footer {
